use python_version

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -40,6 +40,7 @@ tests:
       imports:
         - docling_core
       pip_check: true
+      # python_version: ${{ python_min }}  # need rattler-build >=0.31.0
   - script:
       - validate --help
       - generate_jsonschema --help
