--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -1,7 +1,7 @@
 context:
   name: docling-core
   version: 2.4.0
-  python_min: "3.9" # remove this line once https://github.com/prefix-dev/rattler-build/pull/1122 is available
+  python_min: "3.9"
 
 package:
   name: ${{ name|lower }}
@@ -40,7 +40,7 @@ tests:
       imports:
         - docling_core
       pip_check: true
-      # python_version: ${{ python_min }}  # need rattler-build >=0.31.0
+      python_version: ${{ python_min }}
   - script:
       - validate --help
       - generate_jsonschema --help
