--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -39,6 +39,8 @@ requirements:
     - latex2mathml >=3.77.0,<4.0.0
     - defusedxml >=0.7.1,<0.8.0
     - typing_extensions >=4.12.2,<5.0.0
+    - transformers >=4.34.0,<5.0.0
+    - semchunk >=2.2.0,<3.0.0
 tests:
   - python:
       imports:
